src/web/theme/components/user-registration.less
.user-reg {
    text-align: center;

    div {
        text-align: center;
    }

    h1 {
        font-size: 1.2em;
        text-transform: uppercase;
    }

    p {
        padding: 0 8px;
    }

    label {
        font-weight: 400;;
    }

    .btn {
        margin: 0 auto 30px;
        max-width: 350px;
    }

    .confirmation-number {
        .form-control {
            width: 24.4%;
            max-width: 50px;
            text-align: center;
        }
        margin: 30px 0 45px;
    }
}

